Cleanup of unix node moule (Add @Nonnull annotations and fix intellij hints)